fix background on iOS

--- a/eugeniosournia/style.css
+++ b/eugeniosournia/style.css
@@ -47,6 +47,10 @@ html::before {
   inset: 0;
   min-height: 100%;
   opacity: 0.5;
+  padding-top: env(safe-area-inset-top);
+  padding-bottom: env(safe-area-inset-bottom);
+  padding-left: env(safe-area-inset-left);
+  padding-right: env(safe-area-inset-right);
   position: absolute;
   width: 100%;
   z-index: -1;
